<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingTop="@dimen/status_bar_height">

    <ImageView
        android:id="@+id/closeButton"
        style="@style/CloseButton.Bright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="@dimen/bias_parent_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorTitle"
        style="@style/FeatureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/processing_error_guide_line" />

    <com.test.mercadolibre.base.widget.error.ProcessingErrorView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        app:processingErrorIcon="@drawable/ic_error"
        app:processingErrorTitle="@string/error_title"
        app:processingErrorSubtitle="@string/error_subtitle"
        app:processingErrorMainButton="@string/button_error_primary"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>